added 3 sections and fix bugs

--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,7 @@
 	</header>
 
 	<main class="main">
+
 		<section class="arrivals">
 			<div class="container">
 				<div class="arrivals__box">
@@ -105,8 +106,13 @@
 					<li class="arrivals__item">
 						<article class="card">
 							<a class="card__link" href="#">
-								<img class="card__img" src="images/main/woman-1.jpg" alt="Photo woman" width="470px"
-									height="705px">
+								<div class="card__photo">
+									<img class="card__img" src="images/main/woman-1.jpg" alt="Photo woman" width="470px"
+										height="705px">
+									<span class="card__backside">
+										Shop now
+									</span>
+								</div>
 							</a>
 							<h3 class="card__subtitle">
 								Cute Multi Color Polak Dot Sweater
@@ -119,8 +125,13 @@
 					<li class="arrivals__item">
 						<article class="card">
 							<a class="card__link" href="#">
-								<img class="card__img" src="images/main/woman-2.jpg" alt="Photo woman" width="470px"
-									height="705px">
+								<div class="card__photo">
+									<img class="card__img" src="images/main/woman-2.jpg" alt="Photo woman" width="470px"
+										height="705px">
+									<span class="card__backside">
+										Shop now
+									</span>
+								</div>
 							</a>
 							<h3 class="card__subtitle">
 								Square Neck Adjustable Shoulder Straps Dress
@@ -133,8 +144,13 @@
 					<li class="arrivals__item">
 						<article class="card">
 							<a class="card__link" href="#">
-								<img class="card__img" src="images/main/woman-3.jpg" alt="Photo woman" width="470px"
-									height="705px">
+								<div class="card__photo">
+									<img class="card__img" src="images/main/woman-3.jpg" alt="Photo woman" width="470px"
+										height="705px">
+									<span class="card__backside">
+										Shop now
+									</span>
+								</div>
 							</a>
 							<h3 class="card__subtitle">
 								A V-neckline Drawstring Ruched Top
@@ -147,8 +163,13 @@
 					<li class="arrivals__item">
 						<article class="card">
 							<a class="card__link" href="#">
-								<img class="card__img" src="images/main/woman-2.jpg" alt="Photo woman" width="470px"
-									height="705px">
+								<div class="card__photo">
+									<img class="card__img" src="images/main/woman-8.jpg" alt="Photo woman" width="470px"
+										height="705px">
+									<span class="card__backside">
+										Shop now
+									</span>
+								</div>
 							</a>
 							<h3 class="card__subtitle">
 								Square Neck Adjustable Shoulder Straps Dress
@@ -161,8 +182,13 @@
 					<li class="arrivals__item">
 						<article class="card">
 							<a class="card__link" href="#">
-								<img class="card__img" src="images/main/woman-2.jpg" alt="Photo woman" width="470px"
-									height="705px">
+								<div class="card__photo">
+									<img class="card__img" src="images/main/woman-7.jpg" alt="Photo woman" width="470px"
+										height="705px">
+									<span class="card__backside">
+										Shop now
+									</span>
+								</div>
 							</a>
 							<h3 class="card__subtitle">
 								Square Neck Adjustable Shoulder Straps Dress
@@ -175,6 +201,242 @@
 				</ul>
 			</div>
 		</section>
+
+		<section class="plussize">
+			<div class="container">
+				<ul class="plussize__list">
+					<li class="plussize__item plussize__item--info">
+						<h2 class="plussize__title title">
+							For plus size
+						</h2>
+						<div class="plussize__text">
+							<p>
+								Discover stylish images for every day
+							</p>
+						</div>
+						<button class="plussize__button button" type="button">
+							Shop now
+						</button>
+					</li>
+					<li class="plussize__item">
+						<article class="card">
+							<a class="card__link" href="#">
+								<div class="card__photo">
+									<img class="card__img" src="images/main/woman-4.jpg" alt="Photo woman" width="470px"
+										height="705px">
+									<span class="card__backside">
+										Bestsellers
+									</span>
+								</div>
+							</a>
+							<h3 class="card__subtitle">
+								Long Sleeves Solid Top
+							</h3>
+							<span class="card__price">
+								$35
+							</span>
+						</article>
+					</li>
+					<li class="plussize__item">
+						<article class="card">
+							<a class="card__link" href="#">
+								<div class="card__photo">
+									<img class="card__img" src="images/main/woman-5.jpg" alt="Photo woman" width="470px"
+										height="705px">
+									<span class="card__backside">
+										Bestsellers
+									</span>
+								</div>
+							</a>
+							<h3 class="card__subtitle">
+								Night Sky Shimmer Sleeveless Layered Dress
+							</h3>
+							<span class="card__price">
+								$37
+							</span>
+						</article>
+					</li>
+				</ul>
+			</div>
+		</section>
+
+		<section class="category">
+			<div class="container">
+				<h2 class="category__title title">
+					Explore the categories
+				</h2>
+				<ul class="category__slider">
+					<li class="category__item">
+						<article class="card">
+							<a class="card__link" href="#">
+								<div class="card__photo">
+									<img class="card__img" src="images/main/woman-6.jpg" alt="Photo woman" width="350px"
+										height="525px">
+									<span class="card__backside">
+										Coats & Jackets
+									</span>
+								</div>
+							</a>
+							<h3 class="card__subtitle">
+								Coats & Jackets
+							</h3>
+							<a class="card__link" href="#">
+								shop now
+							</a>
+						</article>
+					</li>
+					<li class="category__item">
+						<article class="card">
+							<a class="card__link" href="#">
+								<div class="card__photo">
+									<img class="card__img" src="images/main/woman-7.jpg" alt="Photo woman" width="350px"
+										height="525px">
+									<span class="card__backside">
+										Square Neck Adjustable Shoulder Straps Dress
+									</span>
+								</div>
+							</a>
+							<h3 class="card__subtitle">
+								Square Neck Adjustable Shoulder Straps Dress
+							</h3>
+							<a class="card__link" href="#">
+								shop now
+							</a>
+						</article>
+					</li>
+					<li class="category__item">
+						<article class="card">
+							<a class="card__link" href="#">
+								<div class="card__photo">
+									<img class="card__img" src="images/main/woman-8.jpg" alt="Photo woman" width="350px"
+										height="525px">
+									<span class="card__backside">
+										Square Neck Adjustable Shoulder Straps Dress
+									</span>
+								</div>
+							</a>
+							<h3 class="card__subtitle">
+								Square Neck Adjustable Shoulder Straps Dress
+							</h3>
+							<a class="card__link" href="#">
+								shop now
+							</a>
+						</article>
+					</li>
+					<li class="category__item">
+						<article class="card">
+							<a class="card__link" href="#">
+								<div class="card__photo">
+									<img class="card__img" src="images/main/woman-11.jpg" alt="Photo woman" width="350px"
+										height="525px">
+									<span class="card__backside">
+										Shirts & Tops
+									</span>
+								</div>
+							</a>
+							<h3 class="card__subtitle">
+								Shirts & Tops
+							</h3>
+							<a class="card__link" href="#">
+								shop now
+							</a>
+						</article>
+					</li>
+					<li class="category__item">
+						<article class="card">
+							<a class="card__link" href="#">
+								<div class="card__photo">
+									<img class="card__img" src="images/main/woman-11.jpg" alt="Photo woman" width="350px"
+										height="525px">
+									<span class="card__backside">
+										Shirts & Tops
+									</span>
+								</div>
+							</a>
+							<h3 class="card__subtitle">
+								Shirts & Tops
+							</h3>
+							<a class="card__link" href="#">
+								shop now
+							</a>
+						</article>
+					</li>
+					<li class="category__item">
+						<article class="card">
+							<a class="card__link" href="#">
+								<div class="card__photo">
+									<img class="card__img" src="images/main/woman-11.jpg" alt="Photo woman" width="350px"
+										height="525px">
+									<span class="card__backside">
+										Shirts & Tops
+									</span>
+								</div>
+							</a>
+							<h3 class="card__subtitle">
+								Shirts & Tops
+							</h3>
+							<a class="card__link" href="#">
+								shop now
+							</a>
+						</article>
+					</li>
+				</ul>
+			</div>
+		</section>
+
+		<section class='sells'>
+			<div class="container">
+				<div class="sells__box">
+					<div class="sells__photo">
+						<img src="images/main/woman-9.jpg" alt="Background-woman">
+					</div>
+					<div class="sells__content">
+						<h2 class="sells__title title">
+							Code for 10% off your first full-price order
+						</h2>
+						<span class="sells__info">
+							Firsttime
+						</span>
+						<button class="sells__button button" type="button">
+							Subscribe
+						</button>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="instagram">
+			<div class="container">
+				<div class="instagram__box">
+					<div class="instagram__links">
+						<div class="instagram__item">
+							<img class="instagram__img" src="images/main/woman-10.jpg" alt="Photo woman" width="225px"
+								height="242px">
+							<a class="instagram__link" href="#">
+								Follow us
+							</a>
+							<span class="instagram__backside">
+								instargam
+							</span>
+						</div>
+						<div class="instagram__item">
+							<img class="instagram__img" src="images/main/woman-10.jpg" alt="Photo woman" width="225px"
+								height="242px">
+							<a class="instagram__link" href="#">
+								Follow us
+							</a>
+							<span class="instagram__backside">
+								instargam
+							</span>
+						</div>
+					</div>
+					<div class="instagram__photo">
+						<img src="images/main/woman-11.jpg" alt="Photo woman" width="350px" height="437px">
+					</div>
+				</div>
+			</div>
+		</section>
+
 	</main>
 
 	<footer class="footer">
