added filter-color section

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -171,6 +171,118 @@
 							</button>
 						</div>
 					</div>
+					<div class="filter-color">
+						<form class="filter-color__form">
+							<div class="filter-color__main">
+								<label class="filter-color__label">
+									<div class="filter-color__box">
+										<input class="filter-color__input" type="checkbox">
+										<span class="filter-color__checkbox filter-color__checkbox--beiges"></span>
+									</div>
+									<span class="filter-color__text">Beiges & Taupes</span>
+								</label>
+								<label class="filter-color__label">
+									<div class="filter-color__box">
+										<input class="filter-color__input" type="checkbox">
+										<span class="filter-color__checkbox filter-color__checkbox--khaki"></span>
+									</div>
+									<span class="filter-color__text">Khaki</span>
+								</label>
+								<label class="filter-color__label">
+									<div class="filter-color__box">
+										<input class="filter-color__input" type="checkbox">
+										<span class="filter-color__checkbox filter-color__checkbox--pinks"></span>
+									</div>
+									<span class="filter-color__text">Pinks</span>
+								</label>
+								<label class="filter-color__label">
+									<div class="filter-color__box">
+										<input class="filter-color__input" type="checkbox">
+										<span class="filter-color__checkbox filter-color__checkbox--black"></span>
+									</div>
+									<span class="filter-color__text">Blacks</span>
+								</label>
+								<label class="filter-color__label">
+									<div class="filter-color__box">
+										<input class="filter-color__input" type="checkbox">
+										<span class="filter-color__checkbox filter-color__checkbox--metallic"></span>
+									</div>
+									<span class="filter-color__text">Metallics</span>
+								</label>
+								<label class="filter-color__label">
+									<div class="filter-color__box">
+										<input class="filter-color__input" type="checkbox">
+										<span class="filter-color__checkbox filter-color__checkbox--purple"></span>
+									</div>
+									<span class="filter-color__text">Purples</span>
+								</label>
+								<label class="filter-color__label">
+									<div class="filter-color__box">
+										<input class="filter-color__input" type="checkbox">
+										<span class="filter-color__checkbox filter-color__checkbox--blues"></span>
+									</div>
+									<span class="filter-color__text">Blues</span>
+								</label>
+								<label class="filter-color__label">
+									<div class="filter-color__box">
+										<input class="filter-color__input" type="checkbox">
+										<span class="filter-color__checkbox filter-color__checkbox--yellow"></span>
+									</div>
+									<span class="filter-color__text">Yellows</span>
+								</label>
+								<label class="filter-color__label">
+									<div class="filter-color__box">
+										<input class="filter-color__input" type="checkbox">
+										<span class="filter-color__checkbox filter-color__checkbox--brown"></span>
+									</div>
+									<span class="filter-color__text">Browns</span>
+								</label>
+								<label class="filter-color__label">
+									<div class="filter-color__box">
+										<input class="filter-color__input" type="checkbox">
+										<span class="filter-color__checkbox filter-color__checkbox--mustard"></span>
+									</div>
+									<span class="filter-color__text">Mustard</span>
+								</label>
+								<label class="filter-color__label">
+									<div class="filter-color__box">
+										<input class="filter-color__input" type="checkbox">
+										<span class="filter-color__checkbox filter-color__checkbox--red"></span>
+									</div>
+									<span class="filter-color__text">reds</span>
+								</label>
+								<label class="filter-color__label">
+									<div class="filter-color__box">
+										<input class="filter-color__input" type="checkbox">
+										<span class="filter-color__checkbox filter-color__checkbox--green"></span>
+									</div>
+									<span class="filter-color__text">Greens</span>
+								</label>
+								<label class="filter-color__label">
+									<div class="filter-color__box">
+										<input class="filter-color__input" type="checkbox">
+										<span class="filter-color__checkbox filter-color__checkbox--orange"></span>
+									</div>
+									<span class="filter-color__text">Oranges</span>
+								</label>
+								<label class="filter-color__label">
+									<div class="filter-color__box">
+										<input class="filter-color__input" type="checkbox">
+										<span class="filter-color__checkbox filter-color__checkbox--grey"></span>
+									</div>
+									<span class="filter-color__text">Greys</span>
+								</label>
+							</div>
+							<div class="filter-color__bottom">
+								<button class="filter-color__button button button--white">
+									clear
+								</button>
+								<button class="filter-color__button button">
+									apply
+								</button>
+							</div>
+						</form>
+					</div>
 				</div>
 				<ul class="catalog__list">
 					<li class="catalog__card">
