--- a/app/catalog.html
+++ b/app/catalog.html
@@ -872,6 +872,75 @@
 							</div>
 						</article>
 					</li>
+					<li class="catalog__card">
+						<article class="card">
+							<a class="card__link" href="#">
+								<div class="card__photo">
+									<img class="card__img" src="images/catalog/woman-12.jpg" alt="Photo woman" width="470px"
+										height="705px">
+									<span class="card__backside">
+										buy now
+									</span>
+								</div>
+							</a>
+							<h3 class="card__subtitle">
+								Sexy Spaghetti Strap Crossover Front Velvet Bodycon Dress
+							</h3>
+							<span class="card__price">
+								$37
+							</span>
+							<div class="card__colors">
+								<span class="card__color"></span>
+								<span class="card__color card__color--orange"></span>
+							</div>
+						</article>
+					</li>
+					<li class="catalog__card">
+						<article class="card">
+							<a class="card__link" href="#">
+								<div class="card__photo">
+									<img class="card__img" src="images/catalog/woman-12.jpg" alt="Photo woman" width="470px"
+										height="705px">
+									<span class="card__backside">
+										buy now
+									</span>
+								</div>
+							</a>
+							<h3 class="card__subtitle">
+								Sexy Spaghetti Strap Crossover Front Velvet Bodycon Dress
+							</h3>
+							<span class="card__price">
+								$37
+							</span>
+							<div class="card__colors">
+								<span class="card__color"></span>
+								<span class="card__color card__color--orange"></span>
+							</div>
+						</article>
+					</li>
+					<li class="catalog__card">
+						<article class="card">
+							<a class="card__link" href="#">
+								<div class="card__photo">
+									<img class="card__img" src="images/catalog/woman-12.jpg" alt="Photo woman" width="470px"
+										height="705px">
+									<span class="card__backside">
+										buy now
+									</span>
+								</div>
+							</a>
+							<h3 class="card__subtitle">
+								Sexy Spaghetti Strap Crossover Front Velvet Bodycon Dress
+							</h3>
+							<span class="card__price">
+								$37
+							</span>
+							<div class="card__colors">
+								<span class="card__color"></span>
+								<span class="card__color card__color--orange"></span>
+							</div>
+						</article>
+					</li>
 				</ul>
 				<div class="catalog__bottom">
 					<button class="catalog__btn button" type="button">
