--- a/app/catalog.html
+++ b/app/catalog.html
@@ -66,9 +66,127 @@
 						<button class="header__btn" type="button">
 							sign in
 						</button>
-						<button class="header__btn" type="button">
+						<button class="header__btn header__btn--cart" type="button">
 							Cart 0
 						</button>
+						<div class="cart">
+							<div class="cart__container">
+								<div class="cart__top">
+									<h2 class="cart__title title">
+										your cart (2)
+									</h2>
+									<button class="cart__close" type="button">
+										<svg width="14" height="14" viewBox="0 0 14 14" fill="none">
+											<path
+												d="M14 1.99394L8.99394 7L14 12.0061L12.0061 14L7 9.00808L2.00808 14L0 11.9919L4.99192 7L0 2.00808L2.00808 0L7 4.99192L12.0061 0L14 1.99394Z"
+												fill="black" />
+										</svg>
+									</button>
+								</div>
+								<div class="cart__content">
+									<ul class="cart__list">
+										<li class="cart__item">
+											<div class="cart__photo">
+												<img class="cart__img" src="images/main/cart-1.jpg" alt="Woman-photo" width="120px"
+													height="181px">
+											</div>
+											<div class="cart__info">
+												<h3 class="cart__subtitle">
+													Short Sleeve Round Neck Petal Split Back Detail Crop Tee
+												</h3>
+												<div class="cart__attr">
+													<div class="cart__box">
+														<span class="cart__color">
+															Color:
+														</span>
+														<span class="cart__category cart__category--color">
+															Charcoal
+														</span>
+													</div>
+													<div class="cart__box">
+														<span class="cart__size">
+															Size:
+														</span>
+														<span class="cart__category">
+															S
+														</span>
+													</div>
+												</div>
+												<div class="cart__sum">
+													<input class="cart__input" type="number" value="1">
+												</div>
+											</div>
+											<div class="cart__inner">
+												<span class="cart__price">
+													$16
+												</span>
+												<a class="cart__link" href="#">
+													remove
+												</a>
+											</div>
+										</li>
+										<li class="cart__item">
+											<div class="cart__photo">
+												<img class="cart__img" src="images/main/cart-2.jpg" alt="Woman-photo" width="120px"
+													height="181px">
+											</div>
+											<div class="cart__info">
+												<h3 class="cart__subtitle">
+													A V-neckline Drawstring Ruched Top
+												</h3>
+												<div class="cart__attr">
+													<div class="cart__box">
+														<span class="cart__color">
+															Color:
+														</span>
+														<span class="cart__category cart__category--color">
+															Brown
+														</span>
+													</div>
+													<div class="cart__box">
+														<span class="cart__size">
+															Size:
+														</span>
+														<span class="cart__category">
+															S
+														</span>
+													</div>
+												</div>
+												<div class="cart__sum">
+													<input class="cart__input" type="number" value="1">
+												</div>
+											</div>
+											<div class="cart__inner">
+												<span class="cart__price">
+													$31
+												</span>
+												<a class="cart__link" href="#">
+													remove
+												</a>
+											</div>
+										</li>
+									</ul>
+								</div>
+								<div class="cart__bottom">
+									<div class="cart__wrapper">
+										<span class="cart__total">
+											Subtotal
+										</span>
+										<span class="cart__price cart__price--big">
+											$47
+										</span>
+									</div>
+									<div class="cart__text">
+										<p>
+											Shipping, taxes, and discounts will be calculated at checkout
+										</p>
+									</div>
+									<button class="cart__button button" type="button">
+										Checkout
+									</button>
+								</div>
+							</div>
+						</div>
 					</div>
 				</nav>
 			</div>
